	manual/images-compendium/sc-ol-sendSignedMail_en.png,
	manual/images-compendium/sc-gpgol-options-textformat_en.png,
	manual/images-compendium/sc-ol-sendEncryptedMail_en.png,
	manual/images-compendium/sc-ol-adele-sendOpenpgpKey-inline_en.png,
	manual/images-compendium/sc-ol-adele-sendOpenpgpKey-attachment_en.png: 
	Add new English screenshots by Drew.

2010-08-31  Emanuel Schuetze <emanuel@intevation.de>

	* manual/Makefile.am: Adapt Makefile.am to added screenshots.

	* manual/Makefile.am: Changed image path for compendium and
	hyperlatex files.
	* manual/gpg4win-compendium-de.tex: Added image-hyperlatex path
	for hlxicons.

	* manual/gpg4win-logo.eps: Remove duplicated gpg4win logo. EPS file no
	longer required in manual directory (see log dir for original EPS
	file).

	* manual/images-compendium/sc-kleopatra-encrypt-selectCertificate_en.png,
	manual/images-compendium/sc-kleopatra-import-openpgp-secret-key_en.png,
	manual/images-compendium/sc-kleopatra-import-certificate_en.png,
	manual/images-compendium/sc-kleopatra-signFile3_en.png,
	manual/images-compendium/sc-kleopatra-signFile2_en.png,
	manual/images-compendium/sc-kleopatra-exportCertificateToServer_en.png,
	manual/images-compendium/sc-kleopatra-signFile1_en.png,
	manual/images-compendium/sc-kleopatra-openpgp-keyPairCreated_en.png:
	Added new English screenshots.

	* manual/gpg4win-compendium-de.tex,
	manual/gpg4win-compendium-en.tex:
	Update pdf meta infos.

2010-08-30 Drew Northup <dnorthup@maine.edu>

	* manual/images-compendium/sc-gpgol-options_en.png,
	manual/images-compendium/sc-ol-sendEncryptedMail_en.png,
	manual/images-compendium/sc-kleopatra-sign-OpenpgpPinentry_en.png,
	manual/images-compendium/sc-gpgex-contextmenu-verifyDecrypt_en.png,
	manual/images-compendium/sc-gpgex-contextmenu-signEncrypt_en.png:
	Adding some still missing English screenshots: GpgEX, Pinentry for
	secret key, a couple more gpgol and outlook screenshots.

2010-08-30  Emanuel Schuetze <emanuel@intevation.de>
